samples/_failures_safe/1761204640_5ff317_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_559ea8af.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_559ea8af.c:152:13: error: expected declaration or statement at end of input
  152 |             result[i][j] = matrix[j][i];
      |             ^~~~~~
./samples/SAFE/__tmp_559ea8af.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_559ea8af.c:152:13: error: expected declaration or statement at end of input
